--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -902,6 +902,10 @@ video {
   width: 3rem;
 }
 
+.w-2\/3{
+  width: 66.666667%;
+}
+
 .w-20{
   width: 5rem;
 }
@@ -1662,12 +1666,20 @@ video {
     width: 100%;
   }
 
+  .sm\:w-96{
+    width: 24rem;
+  }
+
   .sm\:justify-end{
     justify-content: flex-end;
   }
 
   .sm\:rounded-lg{
     border-radius: 0.5rem;
+  }
+
+  .sm\:p-2{
+    padding: 0.5rem;
   }
 
   .sm\:pt-12{
@@ -1718,6 +1730,10 @@ video {
 
   .md\:w-96{
     width: 24rem;
+  }
+
+  .md\:w-full{
+    width: 100%;
   }
 
   .md\:items-center{
