--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -614,6 +614,10 @@ video {
   border-width: 0;
 }
 
+.invisible{
+  visibility: hidden;
+}
+
 .fixed{
   position: fixed;
 }
@@ -882,6 +886,10 @@ video {
   height: 100vh;
 }
 
+.h-16{
+  height: 4rem;
+}
+
 .max-h-96{
   max-height: 24rem;
 }
@@ -940,6 +948,22 @@ video {
 
 .w-screen{
   width: 100vw;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-48{
+  width: 12rem;
+}
+
+.w-52{
+  width: 13rem;
 }
 
 .max-w-xl{
@@ -1056,6 +1080,10 @@ video {
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-visible{
+  overflow: visible;
 }
 
 .overflow-y-auto{
@@ -1201,6 +1229,14 @@ video {
 
 .p-px{
   padding: 1px;
+}
+
+.p-12{
+  padding: 3rem;
+}
+
+.p-5{
+  padding: 1.25rem;
 }
 
 .px-1{
@@ -1606,6 +1642,10 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:visible{
+    visibility: visible;
+  }
+
   .sm\:absolute{
     position: absolute;
   }
@@ -1616,6 +1656,11 @@ video {
 
   .sm\:top-0{
     top: 0px;
+  }
+
+  .sm\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .sm\:ml-32{
@@ -1640,6 +1685,14 @@ video {
 
   .sm\:h-\[700px\]{
     height: 700px;
+  }
+
+  .sm\:h-16{
+    height: 4rem;
+  }
+
+  .sm\:h-28{
+    height: 7rem;
   }
 
   .sm\:w-1\/2{
